Fixed scrollbar

--- a/waffles_frontend/src/components/Chat.css
+++ b/waffles_frontend/src/components/Chat.css
@@ -69,11 +69,28 @@ ul li {
 
   overflow-x: hidden;
   overflow-y: auto;
-  height: 62%;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-color: black white;
+  height: 70%;
   border-top: 2px solid #655889;
   /* border-bottom: 2px solid #655889; */
+}
+
+/* SCROLL BAR */
+.chat_body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  border-radius: 1vh;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.chat_body::-webkit-scrollbar {
+  width: 0.6vw;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 1vh;
+}
+
+.chat_body::-webkit-scrollbar-thumb {
+  border-radius: 1vh;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  background-color: white;
 }
 
 .chat_message {
