--- a/waffles_frontend/src/components/Sidebar.css
+++ b/waffles_frontend/src/components/Sidebar.css
@@ -30,22 +30,22 @@
   width: 100%;
   height: 3vh;
   border-radius: 20px;
-  /* margin-right: 10px; */
-  padding-top: 1.5vh;
-  padding-bottom: 1.5vh;
+  padding-top: 2.4vh;
+  padding-bottom: 2.4vh;
 }
 
 .sidebar_searchContainer > .MuiSvgIcon-root {
   color: white;
-  padding: 10px;
+  margin-left: 1.2vw;
 }
 
 .sidebar_searchContainer > input {
   border: none;
   outline: none;
   background-color: #8675a9;
-  margin-right: 10px;
+  margin-right: 1vw;
   width: 100%;
+  margin-left: 0.6vw;
 }
 
 .sidebar_searchContainer > input::placeholder {
@@ -73,7 +73,7 @@
 
 .sidebar_chats::-webkit-scrollbar {
   width: 5px;
-  display: none;
+  /* display: none; */
 }
 
 /* 
@@ -84,3 +84,21 @@
 ::-webkit-scrollbar-thumb:hover{
   background: linear-gradient(transparent, #716F81);
 } */
+
+.sidebar_chats::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  border-radius: 1vh;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.sidebar_chats::-webkit-scrollbar {
+  width: 0.6vw;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 1vh;
+}
+
+.sidebar_chats::-webkit-scrollbar-thumb {
+  border-radius: 1vh;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  background-color: white;
+}
